# dft-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  PR_DESCRIPTION.md  README.md  docker-compose.yaml  env.example  langgraph.json  pyproject.toml  setup.py  start_services.sh
.github/: copilot-instructions.md
.streamlit/: config.toml
backend/: Dockerfile  run_agent.py  run_service.py  settings.py
backend/agents/: __init__.py  agent_manager.py  asta_mcp_client.py  client.py  llm.py  rag.py  tools.py
backend/agents/dft_tools/: __init__.py  ase_tools.py  dft_calculator.py  execution_tools.py  mp_tools.py  pmg_qe.py  pmg_run.py  pmg_vasp.py  pymatgen_tools.py  qe_tools.py  slurm_tools.py  struct_tools.py  structure_tools.py  tool_registry.py  utils.py  vasp_convergence.py
backend/api/: main.py  utils.py
backend/api/endpoints/: agent.py  dft_planner.py  vector_db.py
backend/core/: __init__.py  models.py  schema.py
backend/graph/: qe_workflow.py
backend/tools/: qe_tools.py
backend/utils/: workspace.py
data/raw_data/: README.md  cpd-to-agent.json  exp-database.json
data/raw_data/CPD_H/: adsorption_data.json
data/raw_data/OC2020_H/: adsorption_data.json  adsorption_data_comprehensive.json
data/raw_data/jp4c06194_SI/: adsorption_data.json
docs/: COMPREHENSIVE_GUIDE.md  index.md  installation.md
docs/examples/: slurm_scheduler_example.py
docs/guides/: SLURM_SCHEDULER.md  testing.md
frontend/: Dockerfile  app.py  plan_helpers.py
scripts/: install.sh  run.sh  stop.sh
scripts/utils/: create_pp_database.py  create_pp_database_efficient.py  create_pp_database_v2.py
src/: logger.py  run_agent.py  run_client.py  run_service.py  settings.py
src/agents/: __init__.py  agent_manager.py  client.py  dft_tools.py  llm.py  rag.py  tools.py
src/api/: Dockerfile  dependencies.py  main.py  utils.py
src/api/endpoints/: agent.py  vector_db.py
src/core/: __init__.py  exceptions.py  schema.py
src/database/: __init__.py  postgres.py
src/schema/: __init__.py  schema.py
src/ui/: Dockerfile  app.py
src/utils/: date.py  fileio.py  string.py  url.py
src/web_browser/: base.py
structures/bulk/: Pt_fcc_a4.00.cif  Pt_fcc_a4.00.json
structures/bulk/supercells/: Pt_fcc_a4.00_supercell_2x2x2.cif  Pt_fcc_a4.00_supercell_2x2x2.json
tests/: simple_test.py  test_basic_structure.py  test_build_tools.py  test_converge_tools.py  test_dft.py  test_dft_tools_basic.py  test_dft_tools_comprehensive.py  test_pymatgen_tools.py  test_run_tools.py  test_server_dft.py
